<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/fragment1">

    <fragment
        android:id="@+id/fragment1"
        android:name="com.example.task5.Fragment1"
        android:label="fragment_1"
        tools:layout="@layout/fragment1" >
        <action
            android:id="@+id/action_fragment1_to_fragment2"
            app:destination="@id/fragment2" />
    </fragment>
    <fragment
        android:id="@+id/fragment2"
        android:name="com.example.task5.Fragment2"
        android:label="fragment2"
        tools:layout="@layout/fragment2" >
        <action
            android:id="@+id/action_fragment2_to_fragment1"
            app:destination="@id/fragment1"
            app:popUpTo="@id/navigation"/>
        <action
            android:id="@+id/action_fragment2_to_fragment3"
            app:destination="@id/fragment3" />
    </fragment>
    <fragment
        android:id="@+id/fragment3"
        android:name="com.example.task5.Fragment3"
        android:label="fragment3"
        tools:layout="@layout/fragment3" >
        <action
            android:id="@+id/action_fragment3_to_fragment2"
            app:destination="@id/fragment2"
            app:popUpTo="@id/fragment1" />
        <action
            android:id="@+id/action_fragment3_to_fragment1"
            app:destination="@id/fragment1"
            app:popUpTo="@id/navigation"/>
    </fragment>
    <activity
        android:id="@+id/about"
        android:name="com.example.task5.ActivityAbout"
        android:label="activity_about"
        tools:layout="@layout/activity_about"/>
</navigation>